app/assets/stylesheets/_gray_box.scss
@import 'constants.scss';

.gray-box {
    box-shadow: $subtle-shadow;
    border: 1px solid $color-gray-background;
    background-color: white;
    margin-bottom: $standard-spacing * 2;

    &__title {
        background-color: $color-subtle-gray-background;
        padding: $standard-spacing $standard-spacing*2;
        margin-bottom: 0;
    }

    &__body {
        padding: $standard-spacing * 2;
        padding-top: $standard-spacing;

        &--nopad {
            padding: 0;
        }
    }
}

